--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,14 +11,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-lg-auto my-5 mb-lg-0 me-lg-3">
-      <label for="job-list" class="jobs mb-2">Select level</label>
-      <select class="form-select" id="job-list" name="job-list">
-        <option>Internship</option>
-        <option>Entry Level</option>
-        <option>Mid Level</option>
-        <option>Senior Level</option>
-      </select>
-    </div>
   </div>
 </header>
+
+<app-dashboard></app-dashboard>
