--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<div class="container">
+  <footer class="py-3 border-top my-4">
+    <p class="text-center text-muted">© 2022 TheMuse Job Search, <b>s2i</b></p>
+  </footer>
+</div>
