--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,13 @@
 <header class="p-3 bg-dark text-white">
-  <div class="container">
-    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start mb-4 mb-md-0">
 
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center my-4">
-        <li><a href="#" class="nav-link px-2 text-secondary"><h1>The Muse Job Search</h1></a></li>
-      </ul>
+  <div class="nav my-3 justify-content-center">
 
-      <div class="text-end">
-        <a href="https://github.com/albinaAS93/TheMuse_JobSearch" class="btn btn-outline-light me-2"><i class="fa-brands fa-github"></i></a>
-      </div>
-    </div>
+    <a href="#" class="nav-link text-white">
+      <h1>The Muse Job Search</h1>
+    </a>
 
   </div>
-</header>
 
-<app-dashboard></app-dashboard>
+  <app-dashboard></app-dashboard>
+
+</header>
