--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container justify-content-center">
 
   <label for="job-list" class="text-secondary mb-3 mb-xs-0">Select Job Level</label>
-  <select (change)="filterSearch()" class="form-select p-3" id="level" name="level" #selectedLevel>
+  <select class="form-select p-3" id="level" name="level" #selectedLevel>
     <option value="default">All</option>
     <option value="internship">Internship</option>
     <option value="entry">Entry Level</option>
@@ -9,27 +9,4 @@
     <option value="senior">Senior Level</option>
   </select>
 
-</div>
-
-<div class="container-fluid bg-dark">
-  <div class="row mb-4">
-    <app-jobs class="col-12 d-flex justify-content-center" *ngFor="let job of jobs" [job]="job"></app-jobs>
-  </div>
-  <div class="row justify-content-center  ">
-    <ul class="d-flex pagination-lg ">
-      <li class="page-item" *ngIf="page > 1">
-        <a class="page-link text-dark" href="#" aria-label="Previous" (click)="previousPage()">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-        </a>
-      </li>
-      <li class="page-item"><a class="page-link text-dark" href="#">{{ page }}</a></li>
-      <li class="page-item">
-        <a class="page-link text-dark" href="#" aria-label="Next" (click)="nextPage()">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
-        </a>
-      </li>
-    </ul>
-  </div>
 </div>
