--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="nav my-3 justify-content-center">
 
     <a href="#" class="nav-link text-white">
-      <h1>The Muse Job Search</h1>
+      <a href="javascript:void(0)" [routerLink]="['/dashboard']">The Muse Job Search</a>
     </a>
 
   </div>
