--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="container justify-content-center">
 
-  <label for="job-list" class="text-secondary mb-3 mb-xs-0">Select Job Level</label>
+  <label for="job-list" class="text-secondary mb-3 mb-xs-0" (change)="changeLevel(1)">Select Job Level</label>
   <select class="form-select p-3" id="level" name="level" #selectedLevel>
-    <option value="default">All</option>
+    <option value="all" selected>All</option>
     <option value="internship">Internship</option>
     <option value="entry">Entry Level</option>
     <option value="mid">Mid Level</option>
