--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,11 +3,9 @@
   <div class="nav my-3 justify-content-center">
 
     <a href="#" class="nav-link text-white">
-      <a href="javascript:void(0)" [routerLink]="['/dashboard']">The Muse Job Search</a>
+      <a href="javascript:void(0)" [routerLink]="['']">The Muse Job Search</a>
     </a>
 
   </div>
-
-  <app-dashboard></app-dashboard>
 
 </header>
