--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,11 @@
-<footer class="py-3 border-top my-4 bg-light">
-  <div class="container">
+<footer class="border-top bg-light p-3">
 
+  <div class="container">
     <p class="text-center text-black">
       © 2022 TheMuse Job Search,
       <b>s2i</b>
       <a href="https://github.com/albinaAS93/TheMuse_JobSearch" class="btn mb-2"><i class="fa-brands fa-github"></i></a>
     </p>
-
   </div>
+
 </footer>
