--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,8 @@
-<header class="p-3 bg-dark text-white">
+<header class="p-4 m-xs-0 bg-dark">
 
-  <div class="nav my-3 justify-content-center">
+  <div class="nav justify-content-center">
 
-    <a href="#" class="nav-link text-white">
-      <a href="javascript:void(0)" [routerLink]="['']">The Muse Job Search</a>
-    </a>
+    <a href="javascript:void(0)" [routerLink]="['']" class="nav-link">The Muse Job Search</a>
 
   </div>
 
